--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-
 # Set to the Postgres user you want to connect to; 'postgres' is the default user.
 spring.datasource.username=postgres
 spring.datasource.password=B@ck3n65
 spring.cloud.gcp.sql.database-name=aloha-instance
 # This value is formatted in the form: [gcp-project-id]:[region]:[instance-name]
-spring.cloud.gcp.sql.instance-connection-name=aloha-instance
+spring.cloud.gcp.sql.instance-connection-name=aloha-lake:us-west1:aloha-instance
 # So app starts despite "table already exists" errors.
 spring.datasource.continue-on-error=true
 # Enforces database initialization
 spring.datasource.initialization-mode=always
-#spring.cloud.gcp.project-id=
+spring.cloud.gcp.project-id=aloha-lake
 #spring.cloud.gcp.credentials.location=file:/path/to/service-account.json
