--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.continue-on-error=true
 spring.datasource.initialization-mode=always
 spring.cloud.gcp.project-id=aloha-lake
 #spring.cloud.gcp.credentials.location=file:/path/to/service-account.json
+spring.jpa.hibernate.ddl-auto=update
