--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.cloud.gcp.sql.instance-connection-name=aloha-lake:us-west1:aloha-instance
 # So app starts despite "table already exists" errors.
 spring.datasource.continue-on-error=true
 # Enforces database initialization
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 spring.cloud.gcp.project-id=aloha-lake
 #spring.cloud.gcp.credentials.location=file:/path/to/service-account.json
 spring.jpa.hibernate.ddl-auto=update
