--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.datasource.continue-on-error=true
 spring.cloud.gcp.project-id=aloha-lake
 #spring.cloud.gcp.credentials.location=file:/path/to/service-account.json
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://35.203.190.102:5432/postgres?stringtype=unspecified
