--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Set to the Postgres user you want to connect to; 'postgres' is the default user.
 spring.datasource.username=postgres
 spring.datasource.password=B@ck3n65
-spring.cloud.gcp.sql.database-name=aloha-instance
+spring.cloud.gcp.sql.database-name=postgres
 # This value is formatted in the form: [gcp-project-id]:[region]:[instance-name]
 spring.cloud.gcp.sql.instance-connection-name=aloha-lake:us-west1:aloha-instance
 # So app starts despite "table already exists" errors.
