--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=B@ck3n65
 spring.cloud.gcp.sql.database-name=postgres
 # This value is formatted in the form: [gcp-project-id]:[region]:[instance-name]
-spring.cloud.gcp.sql.instance-connection-name=aloha-lake:us-west1:aloha-instance
+#spring.cloud.gcp.sql.instance-connection-name=aloha-lake:us-west1:aloha-instance
 # So app starts despite "table already exists" errors.
 spring.datasource.continue-on-error=true
 # Enforces database initialization
